--- a/Mech_Yr1_100L/100level_firstsemestermechanical.html
+++ b/Mech_Yr1_100L/100level_firstsemestermechanical.html
@@ -44,11 +44,10 @@
                     <label for="textbooks">Select textbooks:</label>
                     <select onchange="location=this.value">
                       <option value="">-- Select textbooks --</option> 
-                      <option value="https://drive.google.com/file/d/1Vc6ekv6WVcaLSRw1h0Lxet9KFEe5RaZf/view?usp=sharing">Pysics 111</option> 
-                      <option value="https://drive.google.com/file/d/1Nz2cQqNQ08etKiM2sfoN3_PZbb-zBQJG/view?usp=drive_link">past Question</option> 
-                          <option value="https://drive.google.com/file/d/1OzhsW7vqqrsOLQir6dwmhWJfgvHY17nl/view?usp=drive_link">Past Question</option> 
-                          <option value="https://drive.google.com/file/d/1a4lMLf6oBDTUrsELACD7iPeGGzpVj5pc/view?usp=drive_link">Past Question</option> 
-                          </select>
+                      <option value="https://drive.google.com/file/d/1qmpwwrUXm9XHOLoyBoORvoLAyw9J-QpM/view?usp=drive_link">Pysics 111</option> 
+                      <option value="">PAST QUESTIONS </option> 
+
+                   </select>
                     </div>
   
                     <div class="course-card">
@@ -58,10 +57,8 @@
                         <label for="textbooks">Select textbooks:</label>
                         <select onchange="location=this.value">
                           <option value="">-- Select textbooks --</option> 
-                          <option value=""></option> 
-                          <option value=""></option> 
-                              <option value=""></option> 
-                              <option value=""></option> 
+                          <option value="https://drive.google.com/file/d/1OzhsW7vqqrsOLQir6dwmhWJfgvHY17nl/view?usp=drive_link">PAST QUESTIONS </option> 
+
                               </select>
                         </div>
                 
