--- a/Chm_Yr1_100/100evel_secondsemesterchemical.html
+++ b/Chm_Yr1_100/100evel_secondsemesterchemical.html
@@ -41,7 +41,7 @@
                     <label for="textbooks">Select textbooks:</label>
                     <select onchange="location=this.value">
                       <option value="">-- Select textbooks --</option>
-                       <option value="https://drive.google.com/file/d/1Vc6ekv6WVcaLSRw1h0Lxet9KFEe5RaZf/view?usp=sharing">Pysics 111</option>
+                       <option value="https://drive.google.com/file/d/1Vc6ekv6WVcaLSRw1h0Lxet9KFEe5RaZf/view?usp=sharing">PHY 111</option>
                      <option value="https://drive.google.com/file/d/1qmpwwrUXm9XHOLoyBoORvoLAyw9J-QpM/view?usp=drive_link">PAST QUESTIONS </option> 
                        
 
@@ -67,7 +67,7 @@
                             <label for="textbooks">Select textbooks:</label>
                             <select onchange="location=this.value">
                               <option value="">-- Select textbooks --</option> 
-                              <option value=""></option> 
+                              <option value="https://drive.google.com/file/d/1cc59ca3dqvlIEpSZ6hEYsN5kV_unUmcP/view?usp=drive_link">PHY122</option> 
                       </select>
                             </div>
                 
