--- a/Chm_Yr1_100/100evel_secondsemesterchemical.html
+++ b/Chm_Yr1_100/100evel_secondsemesterchemical.html
@@ -62,12 +62,12 @@
                         
                         <div class="course-card">
                           <h2>Course PHY112</h2>
-                          <p>General physics II</p>
-                          <form id="General physics I">
+                          <p>Uniuyo physics</p>
+                          <form id="Uniuyo physics">
                             <label for="textbooks">Select textbooks:</label>
                             <select onchange="location=this.value">
                               <option value="">-- Select textbooks --</option> 
-                              <option value="https://drive.google.com/file/d/1cc59ca3dqvlIEpSZ6hEYsN5kV_unUmcP/view?usp=drive_link">PHY122</option> 
+                              <option value="https://drive.google.com/file/d/1cc59ca3dqvlIEpSZ6hEYsN5kV_unUmcP/view?usp=drive_link">PHY112</option> 
                       </select>
                             </div>
                 
