--- a/Civil_Yr1_100L/100level_firstsemestercivil.html
+++ b/Civil_Yr1_100L/100level_firstsemestercivil.html
@@ -64,8 +64,8 @@
                         
                         <div class="course-card">
                           <h2>Course PHY112</h2>
-                          <p>General physics II</p>
-                          <form id="General physics I">
+                          <p>Uniuyo physics</p>
+                          <form id="Uniuyo physics">
                             <label for="textbooks">Select textbooks:</label>
                             <select onchange="location=this.value">
                               <option value="">-- Select textbooks --</option> 
