--- a/Com_Yr1_100L/100level_firstsemestercomputer.html
+++ b/Com_Yr1_100L/100level_firstsemestercomputer.html
@@ -49,16 +49,14 @@
                    </select>
                     </div>
   
-                    <div class="course-card">
-                      <h2>Course PHY117</h2>
-                      <p>General physics Practical I</p>
-                      <form id="General physics I">
-                        <label for="textbooks">Select textbooks:</label>
-                        <select onchange="location=this.value">
-                          <option value="">-- Select textbooks --</option> 
-                          <option value="https://drive.google.com/file/d/1OzhsW7vqqrsOLQir6dwmhWJfgvHY17nl/view?usp=drive_link">PAST QUESTIONS </option>
-                        </select>
-                        </div>
+                     <div class="course-card">
+                          <h2>Course PHY112</h2>
+                          <p>Uniuyo physics</p>
+                          <form id="Uniuyo physics">
+                            <label for="textbooks">Select textbooks:</label>
+                            <select onchange="location=this.value">
+                              <option value="">-- Select textbooks --</option> 
+                              <option value="https://drive.google.com/file/d/1cc59ca3dqvlIEpSZ6hEYsN5kV_unUmcP/view?usp=drive_link">PHY112</option> 
                 
                         
                          <div class="course-card">
