--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p class="subtitle">Making learning easy</p>
     </div>
     <nav class="use">
-      <a href="about.html">About Us</a>
+      <a href="readme.html">About Us</a>
       <a href="contact.html">Contact Us</a>
     </nav>
   </header>
