--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <p class="subtitle">Making learning easy</p>
     </div>
     <nav class="use">
-      <a href="readme.html">Readme</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="about.html">About</a>
     </nav>
   </header>
 
