--- a/about.html
+++ b/about.html
@@ -20,15 +20,18 @@
     <!-- Introduction Section -->
     <section id="introduction">
         <h2>Welcome to TonyMech E-Library</h2>
-        <p>TonyMech E-Library is a dedicated online resource hub designed specifically for students pursuing Mechanical and Aerospace Engineering. Our goal is to provide easy access to essential study materials, textbooks, research papers, and other resources that promote seamless learning in these technical fields.</p>
+        <p></p>
     </section>
 
     <!-- Our Story Section -->
     <section id="our-story">
         <h2>Our Story</h2>
-        <p>Founded with the vision of simplifying academic learning, TonyMech E-Library started as an initiative to help students easily access educational materials. With the rapid advancement of technology and the growing demand for engineers in Mechanical and Aerospace industries, we recognized the need for a centralized resource that students could rely on for their academic success. Since its inception, we've grown into a platform that empowers students to enhance their learning experience by providing them with valuable tools and knowledge.</p>
+        <p>Founded with the vision of simplifying academic learning, TonyMech E-Library started as an initiative to help students easily access educational materials. 
+            With the rapid advancement of technology and the growing demand for engineers in Mechanical and Aerospace industries, 
+            we recognized the need for a centralized resource that students could rely on for their academic success. Since its inception, 
+            we've grown into a platform that empowers students to enhance their learning experience by providing them with valuable tools and knowledge.</p>
     </section>
-                <h3>TonyMech Founder & CEO</h3>
+                <h3>Favour Tony Founder & CEO</h3>
                 <p>Tony mech is passionate about educational technology and dedicated to enhancing learning experiences for students worldwide.</p>
             </div>
              
