--- a/about.html
+++ b/about.html
@@ -20,7 +20,10 @@
     <!-- Introduction Section -->
     <section id="introduction">
         <h2>Welcome to TonyMech E-Library</h2>
-        <p></p>
+        <p>TonyMech E-Library Resource is a web-based platform designed to provide engineering students and faculty
+    members with easy access to a vast collection of textbooks and academic materials. 
+The website organizes resources by course code, allowing users to quickly find the books they need for their studies and research.
+</p>
     </section>
 
     <!-- Our Story Section -->
@@ -31,6 +34,12 @@
             we recognized the need for a centralized resource that students could rely on for their academic success. Since its inception, 
             we've grown into a platform that empowers students to enhance their learning experience by providing them with valuable tools and knowledge.</p>
     </section>
+    
+    <section id="contribution">
+        <h2>Contribution </h2>
+        <p></p>
+    </section>
+    
                 <h3>Favour Tony Founder & CEO</h3>
                 <p>Tony mech is passionate about educational technology and dedicated to enhancing learning experiences for students worldwide.</p>
             </div>
