--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p class="subtitle">Making learning easy</p>
     </div>
     <nav class="use">
-      <a href="about.html">About</a>
+      <a href=".about.html">About</a>
     </nav>
   </header>
 
