--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p class="subtitle">Making learning easy</p>
     </div>
     <nav class="use">
-     <a href=">about us.html">About us</a>
+     <a href="about.html">About us</a>
       <nav/>
   </header>
 
