--- a/about.html
+++ b/about.html
@@ -25,9 +25,8 @@ The website organizes resources by course code, allowing users to quickly find t
             we've grown into a platform that empowers students to enhance their learning experience by providing them with valuable tools and knowledge.</p>
     </section>
     
-    <section id="contribution">
-        <h2>Contribution </h2>
-        <p><h2>Features</h2>
+    <section id="features">
+  <p><h2>Features</h2>
     <ul>
         <li><strong>Course-Based Navigation:</strong> Users can browse and search textbooks based on course codes.</li>
         <li><strong>User-Friendly Interface:</strong> Designed with a simple and responsive UI using HTML and CSS.</li>
