--- a/about.html
+++ b/about.html
@@ -31,8 +31,10 @@ The website organizes resources by course code, allowing users to quickly find t
         <li><strong>Course-Based Navigation:</strong> Users can browse and search textbooks based on course codes.</li>
         <li><strong>User-Friendly Interface:</strong> Designed with a simple and responsive UI using HTML and CSS.</li>
     </ul>
+<section/>
+    <section id="contact">
     <h2>Contact</h2>
-    <p>For inquiries or support, contact anthonyetimfavour@gmail.com or call 09168721123.</strong></p>
+    <p>For inquiries or support, contact <link anthonyetimfavour@gmail.com> or call 09168721123.</strong></p>
     </section>
      
     <section id="Founder">
