--- a/about.html
+++ b/about.html
@@ -34,8 +34,10 @@ The website organizes resources by course code, allowing users to quickly find t
  </section>
     <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:anthonyetimfavour@gmail.com">support@anthonyetimfavour.com</a></p>
-        <p><call: 09168721123</p>
+    <p>Email: <a href="mailto:anthonyetimfavour@gmail.com">support@anthonyetimfavour.com</a>
+        or call: 09168721123
+    </p>
+        
     </section>
      
     <section id="Founder">
