--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tonymech E-Library</title>
-  <link rel="icon" type="image/png" href="logo/img.png">
+  <title>NUESA UNIUYO E-LIBRARY</title>
+  <link rel="icon" type="image/png" href="">
   <link rel="stylesheet" href="f.css">
 </head>
 <body>
@@ -12,12 +12,11 @@
 
     
     <div class="logo-container">
-      <img src="logo/img.png" alt="Logo">
       <img src="logo/faculty.png" alt="Faculty Logo">
     </div>
   
     <div>
-      <h1 class="main-title">TONYMECH E-LIBRARY</h1>
+      <h1 class="main-title">NUESA UNIUYO E-LIBRARY</h1>
       <p class="subtitle">Making learning easy</p>
     </div>
     <nav class="use">
@@ -67,7 +66,7 @@
     </form>
   </main>
   <footer>
-    <p>&copy; 2025 Tonymech E-Library Resource</p>
+    <p>&copy; 2025 NUESA UNIUYO E-LIBRARY </p>
   </footer>
 
   <script type='module' src="script.js"></script>
