--- a/Agric_Yr1_100L/100level_firstsemesteragric.html
+++ b/Agric_Yr1_100L/100level_firstsemesteragric.html
@@ -1,5 +1,5 @@
 <title>100 Level - First Semester - Agricultural Engineering</title>
-<link rel="icon" type="image/png" href="logo/img.png">
+<link rel="icon" type="image/png" href="logo/faculty.png">
 <link rel="stylesheet" href="../f.css">
 <script src="script.js" defer></script>
 </head>
@@ -7,7 +7,7 @@
 
   <header id="header">
     <div class="logo-container">
-      <img src="../logo/img.png" alt="Logo">
+      <img src="../logo/faculty.png" alt="Logo">
       <img src="../logo/Agric.png" alt="department Logo">
     </div>
     <div>
@@ -127,7 +127,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2025 Tonymech E-library Resource</p>
+  <p>&copy; 2025 NUESA UNIUYO E-LIBRARY</p>
 </footer>
 <script src="script.js"></script>
 </body>
