--- a/Agric_Yr1_100L/100level_secondsemesteragric.html
+++ b/Agric_Yr1_100L/100level_secondsemesteragric.html
@@ -1,13 +1,13 @@
 
 <title>100 Level - Second Semester - Agricultural Engineering</title>
-<link rel="icon" type="image/png" href="logo/img.png">
+<link rel="icon" type="image/png" href="logo/faculty.png">
 <link rel="stylesheet" href="../f.css">
 <script src="script.js" defer></script>
 </head>
 <body>
 <header id="header">
     <div class="logo-container">
-      <img src="../logo/img.png" alt="Logo">
+      <img src="../logo/faculty.png" alt="Logo">
       <img src="../Agric.png" alt="department Logo">
     </div>
     <div>
