--- a/Agric_Yr2_200L/200level_firstsemesteragric.html
+++ b/Agric_Yr2_200L/200level_firstsemesteragric.html
@@ -1,6 +1,6 @@
     
 <title>200Level - First Semester - Agricultural Engineering</title>
-<link rel="icon" type="image/png" href="logo/img.png">
+<link rel="icon" type="image/png" href="logo/faculty.png">
 <link rel="stylesheet" href="../f.css">
 <script src="script.js" defer></script>
 </head>
@@ -8,7 +8,7 @@
 
   <header id="header">
     <div class="logo-container">
-      <img src="../logo/img.png" alt="Logo">
+      <img src="../logo/faculty.png" alt="Logo">
       <img src="../Agric.png" alt="department Logo">
     </div>
     <div>
@@ -129,7 +129,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2025 Tonymech E-library Resource</p>
+  <p>&copy; 2025 </p>
 </footer>
 <script src="script.js"></script>
 </body>
