--- a/Agric_Yr2_200L/200level_secondsemesteragric.html
+++ b/Agric_Yr2_200L/200level_secondsemesteragric.html
@@ -1,6 +1,6 @@
 
 <title>200 Level - Second Semester - Agricultural Engineering</title>
-<link rel="icon" type="image/png" href="logo/img.png">
+<link rel="icon" type="image/png" href="">
 <link rel="stylesheet" href="../f.css">
 <script src="script.js" defer></script>
 </head>
@@ -26,7 +26,7 @@
 
 
 <footer>
-  <p>&copy; 2025 Tonymech E-library Resource</p>
+  <p>&copy; 2025  NUESA UNIUYO E-LIBRARY</p>
 </footer>
 <script src="script.js"></script>
 </body>
