--- a/Chm_Yr1_100/100evel_secondsemesterchemical.html
+++ b/Chm_Yr1_100/100evel_secondsemesterchemical.html
@@ -129,7 +129,7 @@
     </main>
     
     <footer>
-      <p>&copy; 2025 Tonymech E-library Resource</p>
+      <p>&copy; 2025 NUESA UNIUYO E-LIBRARY</p>
     </footer>
     <script src="script.js"></script>
     </body>
