--- a/Chm_Yr1_100/100level_firstsemesterchemical.html
+++ b/Chm_Yr1_100/100level_firstsemesterchemical.html
@@ -1,5 +1,5 @@
 
-<title>100 Level - second Semester - Chemical Engineering</title>
+<title>100 Level - First Semester - Chemical Engineering</title>
 <link rel="icon" type="image/png" href="logo/img.png">
 <link rel="stylesheet" href="/styles.css">
 <script src="script.js" defer></script>
