--- a/Chm_Yr1_100/100evel_secondsemesterchemical.html
+++ b/Chm_Yr1_100/100evel_secondsemesterchemical.html
@@ -1,5 +1,5 @@
 
-<title>100 Level - Second Semester -Chemical Engineering</title>
+<title>100 Level - First Semester -Chemical Engineering</title>
 <link rel="icon" type="image/png" href="logo/faculty.png">
 <link rel="stylesheet" href="../f.css">
 <script src="script.js" defer></script>
