--- a/Chm_Yr2_200l/200level_secondsemesterchemical.html
+++ b/Chm_Yr2_200l/200level_secondsemesterchemical.html
@@ -1,13 +1,13 @@
 
 <title>200 Level - Second Semester - Chemical Engineering</title>
-<link rel="icon" type="image/png" href="logo/img.png">
+<link rel="icon" type="image/png" href="logo/faculty.png">
 <link rel="stylesheet" href="../f.css">
 <script src="script.js" defer></script>
 </head>
 <body>
   <header id="header">
     <div class="logo-container">
-      <img src="../logo/img.png" alt="Logo">
+      <img src="../logo/faculty.png" alt="Logo">
       <img src="../logo/chem.png" alt="department Logo">
     </div>
     <div>
@@ -24,7 +24,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2025 Tonymech E-library Resource</p>
+  <p>&copy; 2025 NUESA UNIUYO E-LIBRARY </p>
 </footer>
 <script src="script.js"></script>
 </body>
