--- a/Civil_Yr1_100L/100level_firstsemestercivil.html
+++ b/Civil_Yr1_100L/100level_firstsemestercivil.html
@@ -1,13 +1,13 @@
 
 <title>100 Level - First Semester - Civil Engineering</title>
-<link rel="icon" type="image/png" href="logo/img.png">
+<link rel="icon" type="image/png" href="logo/faculty.png">
 <link rel="stylesheet" href="../f.css">
 <script src="script.js" defer></script>
 </head>
 <body>
   <header id="header">
     <div class="logo-container">
-      <img src="../logo/img.png" alt="Logo">
+      <img src="../logo/faculty.png" alt="Logo">
       <img src="../logo/civil.png" alt="department Logo">
     </div>
     <div>
@@ -128,7 +128,7 @@
     </main>
     
     <footer>
-      <p>&copy; 2025 Tonymech E-library Resource</p>
+      <p>&copy; 2025 NUESA UNIUYO E-LIBRARY </p>
     </footer>
     <script src="script.js"></script>
     </body>
