--- a/Chm_Yr1_100/100level_firstsemesterchemical.html
+++ b/Chm_Yr1_100/100level_firstsemesterchemical.html
@@ -12,7 +12,7 @@
     </div>
     <div>
       
-      <h1 class="main-title">TONYMECH E-LIBRARY</h1>
+      <h1 class="main-title"> NUESA UNIUYO E-LIBRARY</h1>
       <p class="subtitle">Making learning easy</p>
       <h3>Chemical Engineering </h3>
       <h4>100 Level - First Semester</h4>
