--- a/Elect_Yr1_100L/100level_secondsemesterelectrical.html
+++ b/Elect_Yr1_100L/100level_secondsemesterelectrical.html
@@ -176,7 +176,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2025 Tonymech E-library Resource</p>
+  <p>&copy; 2025 NUESA UNIUYO E-LIBRARY</p>
 </footer>
 <script src="script.js"></script>
 </body>
