--- a/Elect_Yr2_200L/200level_firstsemesterelectrical.html
+++ b/Elect_Yr2_200L/200level_firstsemesterelectrical.html
@@ -1,18 +1,18 @@
 
 <title>200 Level - First Semester - Electrical Engineering</title>
-<link rel="icon" type="image/png" href="logo/img.png">
+<link rel="icon" type="image/png" href="logo/faculty.png">
 <link rel="stylesheet" href="../f.css">
 <script src="script.js" defer></script>
 </head>
 <body>
   <header id="header">
     <div class="logo-container">
-      <img src="../logo/img.png" alt="Logo">
+      <img src="../logo/faculty.png" alt="Logo">
       <img src="../logo/elect.png" alt="department Logo">
     </div>
     <div>
       
-      <h1 class="main-title">TONYMECH E-LIBRARY</h1>
+      <h1 class="main-title">NUESA UNIUYO E-LIBRARY</h1>
       <p class="subtitle">Making learning easy</p>
       <h3>Eectricl and Electronics Engineering </h3>
       <h4>200 Level - First Semester</h4>
@@ -129,7 +129,7 @@
 
 
 <footer>
-  <p>&copy; 2025 Tonymech E-library Resource</p>
+  <p>&copy; 2025 NUESA UNIUYO E-LIBRARY</p>
 </footer>
 <script src="script.js"></script>
 </body>
