--- a/Food_Yr1_100L/100level_firstsemesterfood.html
+++ b/Food_Yr1_100L/100level_firstsemesterfood.html
@@ -1,6 +1,6 @@
 
 <title>100 Level - First Semester - Food Engineering</title>
-<link rel="icon" type="image/png" href="logo/img.png">
+<link rel="icon" type="image/png" href="logo/faculty.png">
 <link rel="stylesheet" href="../f.css">
 <script src="script.js" defer></script>
 </head>
@@ -12,7 +12,7 @@
     </div>
     <div>
       
-      <h1 class="main-title">TONYMECH E-LIBRARY</h1>
+      <h1 class="main-title">NUESA UNIUYO E-LIBRARY</h1>
       <p class="subtitle">Making learning easy</p>
       <h3>Food Engineering </h3>
       <h4>100 Level - First Semester</h4>
@@ -127,7 +127,7 @@
   </main>
   
   <footer>
-    <p>&copy; 2025 Tonymech E-library Resource</p>
+    <p>&copy; 2025 NUESA UNIUYO E-LIBRARY</p>
   </footer>
   <script src="script.js"></script>
   </body>
