--- a/Mech_Yr1_100L/100level_firstsemestermechanical.html
+++ b/Mech_Yr1_100L/100level_firstsemestermechanical.html
@@ -1,6 +1,6 @@
 
   <title>100 Level - First Semester-Mechanical Engineering</title>
-  <link rel="icon" type="image/png" href="logo/img.png">
+  <link rel="icon" type="image/png" href="logo/faculty.png">
   <link rel="icon" type="image/png" href="logo/img.png">
   <link rel="stylesheet" href="../f.css">
   <script src="script.js" defer></script>
@@ -8,12 +8,12 @@
 <body>
   <header id="header">
     <div class="logo-container">
-      <img src="../logo/img.png" alt="Logo">
+      <img src="../logo/faculty.png" alt="Logo">
       <img src="../logo/im.png" alt="department Logo">
     </div>
     <div>
       
-      <h1 class="main-title">TONYMECH E-LIBRARY</h1>
+      <h1 class="main-title">NUESA UNIUYO E-LIBRARY</h1>
       <p class="subtitle">Making learning easy</p>
       <h3>Mechanical Engineering </h3>
       <h4>100 Level - First Semester</h4>
@@ -157,7 +157,7 @@
   </main>
   
   <footer>
-    <p>&copy; 2025 Tonymech E-library Resource</p>
+    <p>&copy; 2025 NUESA UNIUYO E-LIBRARY</p>
   </footer>
   <script src="../script.js"></script>
   </body>
