--- a/Pet_Yr1_100L/100level_firstsemesterpetrolume.html
+++ b/Pet_Yr1_100L/100level_firstsemesterpetrolume.html
@@ -12,7 +12,7 @@
     </div>
     <div>
       
-      <h1 class="main-title">TONYMECH E-LIBRARY</h1>
+      <h1 class="main-title">NUESA UNIUYO E-LIBRARY</h1>
       <p class="subtitle">Making learning easy</p>
       <h3>Petroleum Engineering </h3>
       <h4>100 Level - First Semester</h4>
@@ -131,7 +131,7 @@
   </main>
   
   <footer>
-    <p>&copy; 2025 Tonymech E-library Resource</p>
+    <p>&copy; 2025 NUESA UNIUYO E-LIBRARY</p>
   </footer>
   <script src="script.js"></script>
   </body>
