--- a/Food_Yr1_100L/100level_firstsemesterfood.html
+++ b/Food_Yr1_100L/100level_firstsemesterfood.html
@@ -7,7 +7,7 @@
 <body>
   <header id="header">
     <div class="logo-container">
-      <img src="../logo/img.png" alt="Logo">
+      <img src="../logo/faculty.png" alt="Logo">
       <img src="../logo/food.jpg" alt="department Logo">
     </div>
     <div>
