--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
 <!-- Introduction Section -->
     <section id="introduction">
-        <h2>NUESA UNIUYO E-LIBRARY</h2>
+        <h2> WELCOME TO NUESA UNIUYO E-LIBRARY</h2>
         <p>NUESA UNIUYO E-LIBRARY is a web-based platform designed to provide engineering students and faculty
     members with easy access to a vast collection of textbooks and academic materials. 
 The website organizes resources by course code, allowing users to quickly find the books they need for their studies and research.
