--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ The website organizes resources by course code, allowing users to quickly find t
 <!-- Our Story Section -->
     <section id="our-story">
         <h2>Our Story</h2>
-        <p>Founded by Tonymech with the vision of simplifying academic learning, NUESA UNIUYO E-LIBRARY started as an initiative to help students easily access educational materials. 
+        <p>Founded by Favour Tony in colaboration with the Office of the Director of Academics, NUESA with the vision of simplifying academic learning, NUESA UNIUYO E-LIBRARY started as an initiative to help students easily access educational materials. 
             With the rapid advancement of technology and the growing demand for engineers in Engineering industries, 
             we recognized the need for a centralized resource that students could rely on for their academic success. Since its inception, 
             we've grown into a platform that empowers students to enhance their learning experience by providing them with valuable tools and knowledge.</p>
@@ -41,7 +41,8 @@ The website organizes resources by course code, allowing users to quickly find t
     </section>
      
     <section id="Founder">
-                <h3> FOUNDED AND MAANAGE BY: Favour Tony from Mechanical and Aerospace Engineering </h3>
+                <h3> FOUNDED AND MANAGED BY:</h3>
+        <P>Favour Tony a student of Mechanical and Aerospace Engineering Department Faculty of Engineering </P>
                 <p> NUESA UNIUYO E-LIBRARY is passionate about educational technology and dedicated to enhancing learning experiences for students worldwide.</p>
             </div>
              
