--- a/about.html
+++ b/about.html
@@ -13,16 +13,16 @@
         <h2> WELCOME TO NUESA UNIUYO E-LIBRARY</h2>
         <p>NUESA UNIUYO E-LIBRARY is a web-based platform designed to provide engineering students and faculty
     members with easy access to a vast collection of textbooks and academic materials. 
-The website organizes resources by course code, allowing users to quickly find the books they need for their studies and research.
+The website organizes resources by using course code, allowing users to quickly find the books they need for their studies and research.
 </p>
     </section>
 <!-- Our Story Section -->
     <section id="our-story">
         <h2>Our Story</h2>
-        <p>Founded by Favour Tony in colaboration with the Office of the Director of Academics, NUESA with the vision of simplifying academic learning, NUESA UNIUYO E-LIBRARY started as an initiative to help students easily access educational materials. 
+        <p>Founded by Favour Tony in collaboration with the Office of the Director of Academics, NUESA with the vision of simplifying academic learning, NUESA UNIUYO E-LIBRARY started as an initiative to help students easily access educational materials. 
             With the rapid advancement of technology and the growing demand for engineers in Engineering industries, 
             we recognized the need for a centralized resource that students could rely on for their academic success. Since its inception, 
-            we've grown into a platform that empowers students to enhance their learning experience by providing them with valuable tools and knowledge.</p>
+            we've grown into a platform that empower students to enhance their learning experience by providing them with valuable tools and knowledge.</p>
     </section>
     
     <section id="features">
