--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </form>
   </main>
   <footer>
-    <p>&copy;<p>Designed by Favour Tony ×× James, Anietie (SMNSE) </p> </p>
+    <p>&copy;<p>Designed by Favour Tony ×× James, Anietie (SMNSE) </p>
   </footer>
 
   <script type='module' src="script.js"></script>
