--- a/Agric_Yr2_200L/200level_firstsemesteragric.html
+++ b/Agric_Yr2_200L/200level_firstsemesteragric.html
@@ -9,7 +9,7 @@
   <header id="header">
     <div class="logo-container">
       <img src="../logo/faculty.png" alt="Logo">
-      <img src="../Agric.png" alt="department Logo">
+      <img src="../logo/Agric.png" alt="department Logo">
     </div>
     <div>
       
