--- a/Chm_Yr1_100/100level_firstsemesterchemical.html
+++ b/Chm_Yr1_100/100level_firstsemesterchemical.html
@@ -176,7 +176,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2025 Tonymech E-library Resource</p>
+ <p>&copy; Designed by Favour Tony ×× James, Anietie (SMNSE) </p>
 </footer>
 <script src="script.js"></script>
 </body>
