--- a/Chm_Yr2_200l/200level_firstsemesterchemical.html
+++ b/Chm_Yr2_200l/200level_firstsemesterchemical.html
@@ -128,7 +128,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2025 Tonymech E-library Resource</p>
+  <p>&copy; Designed by Favour Tony ×× James, Anietie (SMNSE) </p>
 </footer>
 <script src="script.js"></script>
 </body>
