--- a/Com_Yr1_100L/100level_seconsemestercomputer.html
+++ b/Com_Yr1_100L/100level_seconsemestercomputer.html
@@ -175,7 +175,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2025 NUESA UNIUYO E-LIBRARY</p>
+ <p>&copy; Designed by Favour Tony ×× James, Anietie (SMNSE) </p>
 </footer>
 <script src="script.js"></script>
 </body>
