--- a/Agric_Yr1_100L/100level_secondsemesteragric.html
+++ b/Agric_Yr1_100L/100level_secondsemesteragric.html
@@ -116,10 +116,10 @@
                               <label for="textbooks">Select textbooks:</label>
                               <select onchange="location=this.value">
                                 <option value="">-- Select textbooks --</option> 
-                                <option value="">R.S.KHURMI ENGINEERING MECHANICS</option> 
-                                <option value="">FLUID MECHANICS AND HYDRAULIC MACHINES</option> 
-                                    <option value="">FLUID MECHANICS BY FRANK WHITE</option> 
-                                    <option value="">FUNDAMETAL MECHANICS OF FLUID</option> 
+                                <option value=""></option> 
+                                <option value=""></option> 
+                                    <option value=""></option> 
+                                    <option value=""></option> 
                                     </select>
                                </div>
 
@@ -143,7 +143,7 @@
 
 
                                    <div class="course-card">
-                                    <h2>Course MEE111</h2>
+                                    <h2>Course MEE112</h2>
                                     <p>Introduction to Mechanical Engineering</p>
                                     <form id="General physics I">
                                       <label for="textbooks">Select textbooks:</label>
